Changelog for Miosix np embedded OS

v2.02
- Reworked timeconversion.h and timeconversion.cpp with much improved
  algorithms for converting from timer ticks to nanoseconds and back
- Modified the policy about global objects inside the kernel. The previous
  policy was to forbid them, by checking with a script that there were none.
  This policy was found to be too restrictive, so a new script
  (miosix/_tools/kernel_global_objects.pl) moves the pointers to function that
  cause their construction in a separate section compared to the one used for
  the application global objects. Thus the global objects are now divided in
  two group: the kernel ones, which are called before boot, and the application
  ones, which are called after boot, right before main. This is made necessary
  by the fact that Miosix allows an application to be statically linked with the
  kernel, so both end up in the same binary file.
- Added SoftwareI2C::sendRepeatedStart(), and fixed a glitch in
  SoftwareI2C::init()
- Fixed bug in STM32Serial in IOCTL_SYNC
- Added test to testsuite to explicitly check the tickSkew logic
- Fixed two bugs in kernel.cpp related to the control scheduler. 1. The idle
  thread needs to be set after the main one. 2. The yield on tick skew in
  restartKernel() was not functioning after the code was rewritten using atomic
  operations. The control scheduler heavily relies on this, because if the burst
  of the current thread finishes while the kernel is paused, preemption can only
  occur here, as the control scheduler does not perform periodic preemption.
- Added skyward's anakin board

v2.01
- Renamed board codenamed "polinode" to its final name "wandstem"
- Committed patch from Alain <carpikemail@gmail.com> to make build output more
  readable. Detailed compiler options are still available building with
  "make VERBOSE=1"
- Fixed bug in intrusive.h which caused compiler errors when building with
  exceptions and RTTI disabled